tests/fixtures/invalid/dict_rshift_bytes.py
# Cannot right shift Dict[str, int] and Bytes
x: dict[str, int] = {"a": 1} >> b"hello"
